// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PossiblePasswords approximate 1`] = `
<dl
  className="dl-horizontal"
>
  <dt>
    Possible Passwords
  </dt>
  <dd>
    ~ 
    221,073,919,720,733,000,000,000
  </dd>
  <dt>
    Entropy
  </dt>
  <dd>
    <ProgressBar
      active={false}
      bsClass="progress-bar"
      bsStyle="info"
      isChild={false}
      label="77.55 bits (Strong)"
      max={128}
      min={0}
      now={77.54887502163469}
      srOnly={false}
      striped={false}
    />
  </dd>
</dl>
`;

exports[`PossiblePasswords exact 1`] = `
<dl
  className="dl-horizontal"
>
  <dt>
    Possible Passwords
  </dt>
  <dd>
    221,073,919,720,733,000,000,000
  </dd>
  <dt>
    Entropy
  </dt>
  <dd>
    <ProgressBar
      active={false}
      bsClass="progress-bar"
      bsStyle="info"
      isChild={false}
      label="77.55 bits (Strong)"
      max={128}
      min={0}
      now={77.54887502163469}
      srOnly={false}
      striped={false}
    />
  </dd>
</dl>
`;

exports[`mapStateToProps custom 1`] = `
Object {
  "approximate": false,
  "entropyBits": 0,
  "entropyTip": Object {
    "minimum": 0,
    "strength": "Very Weak",
    "style": "danger",
  },
  "possiblePasswords": 1,
}
`;

exports[`mapStateToProps custom with invalid possibleItems 1`] = `
Object {
  "approximate": false,
  "entropyBits": 0,
  "entropyTip": Object {
    "minimum": 0,
    "strength": "Very Weak",
    "style": "danger",
  },
  "possiblePasswords": 1,
}
`;

exports[`mapStateToProps custom with strong possiblePasswords 1`] = `
Object {
  "approximate": true,
  "entropyBits": 64,
  "entropyTip": Object {
    "minimum": 64,
    "strength": "Strong",
    "style": "info",
  },
  "possiblePasswords": 18446744073709552000,
}
`;

exports[`mapStateToProps custom with very strong possiblePasswords 1`] = `
Object {
  "approximate": true,
  "entropyBits": 128,
  "entropyTip": Object {
    "minimum": 128,
    "strength": "Very Strong",
    "style": "success",
  },
  "possiblePasswords": 3.402823669209385e+38,
}
`;

exports[`mapStateToProps custom with weak possiblePasswords 1`] = `
Object {
  "approximate": false,
  "entropyBits": 32,
  "entropyTip": Object {
    "minimum": 32,
    "strength": "Weak",
    "style": "warning",
  },
  "possiblePasswords": 4294967296,
}
`;

exports[`mapStateToProps diceware 1`] = `
Object {
  "approximate": true,
  "entropyBits": 77.54887502163469,
  "entropyTip": Object {
    "minimum": 64,
    "strength": "Strong",
    "style": "info",
  },
  "possiblePasswords": 2.2107391972073336e+23,
}
`;

exports[`mapStateToProps generic 1`] = `
Object {
  "approximate": false,
  "entropyBits": 36.775698101669796,
  "entropyTip": Object {
    "minimum": 32,
    "strength": "Weak",
    "style": "warning",
  },
  "possiblePasswords": 117649000000,
}
`;
